# cutting-stock

./: README.md  cutting_stock.py  environment.yml  pyproject.toml  requirements.txt  setup.py
src/cutting_stock/: solver.py  visualization.py
tests/: test_cutting_stock.py
