[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cutting-stock"
version = "0.1.0"
description = "A Python implementation of the cutting stock problem solver"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Ioannis Michaloliakos", email = "ioannis.michalol@ufl.edu"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "scipy",
    "numpy",
    "matplotlib",
    "cvxpy",
    "cvxopt",
]

[project.urls]
Homepage = "https://github.com/ionmich/cutting-stock"
Repository = "https://github.com/ionmich/cutting-stock"
Issues = "https://github.com/ionmich/cutting-stock/issues"

[project.scripts]
cutting-stock = "cutting_stock:main"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.12",
    "flake8>=6.0",
]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
